Update concurrently in package.json #2

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
+    "start": "cd backend && npx nodemon app.js",
     "frontend": "cd frontend && npm start",
-    "dev": "concurrently -n 'backend,frontend' -c 'blue,green' \"npx nodemon app.js\" \"npm run frontend\""
+    "dev": "concurrently -n 'backend,frontend' -c 'blue,green' \"npm run start\" \"npm run frontend\""
   },
   "keywords": [],
   "author": "",
